Fix for auto-scrolling on mobile and search bar shifting on mobile when accordion is opened

--- a/coastal-hazards-portal/src/main/webapp/css/index/slider-items.css
+++ b/coastal-hazards-portal/src/main/webapp/css/index/slider-items.css
@@ -153,6 +153,12 @@
     #content-column {
         height: 100%;
     }
+    
+    /* Scrollable inner container */
+    #application-slide-items-container > div:nth-child(2) > div > div {
+        overflow-y: auto;
+        height: 100%;
+    }
 }
 
 @media (max-width: 991px) {
